Ajout de la simulation de la repulsion des points de la sphère

--- a/style.css
+++ b/style.css
@@ -84,6 +84,9 @@ button:hover {
 button:active {
     border-color: #FF0000;
 }
+button.active {
+    border-color: #FF0000;
+}
 
 nav {
     display: block;
